--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
           href="{{ page.dir | relative_url }}"
           data-tooltip="{{ page.nav.tooltip }}"
         >
-          {{ page.title }}
+          {{ Vinod }}
         </a>
       {% endif %}
     {% endfor %}
